# Lumo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CaseSensitiveDir.ps1  LICENSE  Readme.md  VERSION  current_build_type  main.cpp  submodules.init.txt
Generator/: CMakeLists.txt
Generator/res/: MSVCInfo.aps  icon.icns
Generator/src/: App.cpp  App.h
Generator/src/Backend/: MainBackend.h
Generator/src/Editor/: SlotEditor.cpp  SlotEditor.h  UBOEditor.cpp  UBOEditor.h
Generator/src/Frontend/: CustomImWidgetsConfig.h  ImGuiOverlay.cpp  ImGuiOverlay.h  ImGuiThemes.cpp  MainFrontend.cpp  MainFrontend.h
Generator/src/Generator/: NodeGenerator.cpp  NodeGenerator.h
Generator/src/Graph/: GeneratorCommon.h  GeneratorNode.cpp  GeneratorNode.h  GeneratorNodeSlotInput.cpp  GeneratorNodeSlotInput.h  GeneratorNodeSlotOutput.cpp  GeneratorNodeSlotOutput.h
Generator/src/Gui/: CustomImGuiFileDialogConfig.h  MainFrame.cpp  MainFrame.h
Generator/src/Headers/: LumoCodeGeneratorBuild.h
Generator/src/Project/: ProjectFile.cpp  ProjectFile.h
Generator/src/Res/: sdfmFont.cpp  sdfmToolbarFont.h
Generator/src/Res/fonts/: SDFM_TOOLBAR.ifs  config.xml  imgui.ini
MainLibs/Common/: CMakeLists.txt
MainLibs/Common/src/: defs.h
MainLibs/Common/src/Base/: Base.h  BaseRenderer.cpp  BaseRenderer.h  ComputeBuffer.cpp  ComputeBuffer.h  ComputeShaderPass.cpp  ComputeShaderPass.h  FrameBuffer.cpp  FrameBuffer.h  MeshShaderPass.h  QuadShaderPass.cpp  QuadShaderPass.h  RtxShaderPass.cpp  ShaderPass.cpp  ShaderPass.h  VertexShaderPass.cpp  VertexShaderPass.h
MainLibs/Common/src/Connectors/: AccelStructureConnector.h  LightGroupConnector.h  ModelConnector.h  Readme.md  TexelBufferConnector.h  TextureConnector.h  TextureGroupConnector.h  VariableConnector.h
MainLibs/Common/src/Generic/: ComputeShaderPass.h  FrameBuffer.cpp  FrameBuffer.h  Generic.h  GenericRenderer.cpp  GenericRenderer.h  MeshShaderPass.h  QuadShaderPass.cpp  QuadShaderPass.h  ShaderPass.cpp  ShaderPass.h  VertexShaderPass.h
MainLibs/Common/src/Graph/: Graph.cpp  Graph.h
MainLibs/Common/src/Headers/: Build.h  CommonBuild.h  Globals.h
MainLibs/Common/src/Helper/: MeshLoader.rar  Messaging.cpp  Messaging.h  ThemeHelper.cpp  ThemeHelper.h
MainLibs/Common/src/Interfaces/: AccelStructureInputInterface.h  BufferObjectInterface.h  CameraInterface.h  ComputeInterface.h  GizmoInterface.h  GuiInterface.cpp  GuiInterface.h  LightGroupInputInterface.h  LightInputInterface.h  LightOutputInterface.h  MergedInterface.h  MidiInterface.h  ModelInputInterface.h  ModelOutputInterface.h  MouseInterface.h  NodeInterface.h  NodeManagerInterface.h  NotifyInterface.cpp  NotifyInterface.h  PluginInterface.cpp  PluginInterface.h  RendererInterface.h  ResizerInterface.h  SerializationInterface.h  ShaderInterface.h  ShaderUpdateInterface.h  TaskInterface.h  TexelBufferInputInterface.h  TexelBufferOutputInterface.h  TextureGroupInputInterface.cpp  TextureGroupInputInterface.h  TextureGroupOutputInterface.h  TextureInputInterface.cpp  TextureInputInterface.h  TextureOutputInterface.h  VariableInputInterface.h  VariableOutputInterface.h
MainLibs/Common/src/Profiler/: vkProfiler.hpp
MainLibs/Common/src/SceneGraph/: SceneAccelStructure.cpp  SceneAccelStructure.h  SceneGraph.cpp  SceneGraph.h  SceneLight.cpp  SceneLight.h  SceneLightGroup.cpp  SceneLightGroup.h  SceneMesh.cpp  SceneMesh.h  SceneModel.cpp  SceneModel.h  SceneTextureGroup.cpp  SceneTextureGroup.h  SceneVariable.cpp  SceneVariable.h
MainLibs/Common/src/Systems/: CommonSystem.cpp  CommonSystem.h  FilesTrackerSystem.cpp  FilesTrackerSystem.h  FrameActionSystem.cpp  FrameActionSystem.h  GizmoSystem.cpp  GizmoSystem.h
Plugins/MeshGen/: .gitmodules  CMakeLists.txt  submodules.init.txt
Plugins/MeshGen/cmake/: 3rdparty.cmake  tinyexpr.cmake  tinyexprcpp.cmake
Plugins/MeshGen/doc/: geo_node_primitive_parametrics.diff  geo_node_primitive_torus.diff  source_blender_nodes_geometry_nodes_node_geo_mesh_primitive_parametrics.cc
Plugins/MeshGen/src/: MeshGen.cpp  MeshGen.h
Plugins/MeshGen/src/Headers/: MeshGenBuild.h
Plugins/RTX/: CMakeLists.txt
Plugins/RTX/src/: RTX.cpp  RTX.h
Plugins/RTX/src/Base/: RtxShaderPass.cpp  RtxShaderPass.h
Plugins/RTX/src/Headers/: RTXBuild.h  RTXCommon.h
Plugins/RTX/src/Interfaces/: AccelStructureInputInterface.h  AccelStructureOutputInterface.h
libs/Common/: CMakeLists.txt
libs/Common/src/: defs.h
libs/FontIcons/: CMakeLists.txt  Cousine_Regular.cpp  CustomFont.cpp  CustomFont.h  CustomFont2.cpp  CustomFont2.h  CustomFontToolBar.cpp  CustomFontToolBar.h  CustomFonts.ifs  Roboto_Medium.cpp
libs/Gaia/: CMakeLists.txt
libs/Gaia/src/: IRUniformsLocator.cpp  ImGuiTexture.cpp  ResourceLimits.cpp  StorageBufferStd430.cpp  Texture2D.cpp  TextureCube.cpp  UniformBlockStd140.cpp  VulkanCommandBuffer.cpp  VulkanCore.cpp  VulkanDevice.cpp  VulkanFrameBuffer.cpp  VulkanFrameBufferAttachment.cpp  VulkanImGuiOverlay.cpp  VulkanImGuiRenderer.cpp  VulkanRessource.cpp  VulkanShader.cpp  VulkanSubmitter.cpp  VulkanSwapChain.cpp  VulkanWindow.cpp
libs/ImWidgets/: CMakeLists.txt  ImWidgets.cpp  ImWidgets.h
libs/LumoBackend/: CMakeLists.txt
libs/vkFramework/: CMakeLists.txt  IRUniformsLocator.cpp  IRUniformsLocator.h  ImGuiTexture.cpp  ImGuiTexture.h  ResourceLimits.cpp  StorageBufferStd430.cpp  StorageBufferStd430.h  Texture2D.cpp  Texture2D.h  TextureCube.cpp  TextureCube.h  UniformBlockStd140.cpp  UniformBlockStd140.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCore.cpp  VulkanCore.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanFrameBufferAttachment.cpp  VulkanFrameBufferAttachment.h  VulkanImGuiOverlay.cpp  VulkanImGuiOverlay.h  VulkanImGuiRenderer.cpp  VulkanImGuiRenderer.h  VulkanRessource.cpp  VulkanRessource.h  VulkanShader.cpp  VulkanShader.h  VulkanSubmitter.cpp  VulkanSubmitter.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanWindow.cpp  VulkanWindow.h  vkFramework.h
libs/vkProfiler/: CMakeLists.txt  GLProfiler.cpp  GLProfiler.h  Profiler.h  cProfiler.hpp
(+2063 files in other folders)
